# udemy_fastapi

./: Dockerfile  docker-compose.yml  pyproject.toml  sql_app.db
.devcontainer/: devcontainer.json  docker-compose.yml
app/: main.py
app/chapter7/: app.py  main.py
app/chapter7/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
tests/unit/: test_main.py
