[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
streamlit = "^1.12.2"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pyproject-flake8 = "^0.0.1-alpha.5"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
